force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>Contains all the details of an Order being placed with fields like Order No., Payment Date, Payment Mode, etc.
Child Relationship with: Accounts and Contacts</description>
    <label>Order</label>
    <nameField>
        <displayFormat>Order No-{0000}</displayFormat>
        <label>Order No#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>