force-app/main/default/objects/Order__c/fields/AcocuntName__c.field-meta.xml
<CustomField>
    <fullName>AcocuntName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on Account,specifies the Account Name of selected Account</description>
    <label>Account Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>