force-app/main/default/objects/Order__c/fields/Actual_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_2__c</fullName>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>