force-app/main/default/objects/Order__c/fields/Actual_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Purchase_Date__c</fullName>
    <label>Actual Purchase Date</label>
    <type>Date</type>
</CustomField>