force-app/main/default/objects/Order__c/fields/Amount_On_Order__c.field-meta.xml
<CustomField>
    <fullName>Amount_On_Order__c</fullName>
    <label>Amount On Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>