force-app/main/default/objects/Order__c/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <description>Amount need for purchase</description>
    <label>Amount Requested</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>