force-app/main/default/objects/Order__c/fields/Available_Order_Parts__c.field-meta.xml
<CustomField>
    <fullName>Available_Order_Parts__c</fullName>
    <label>Available Order Parts</label>
    <summarizedField>Line_Items__c.Quantity__c</summarizedField>
    <summaryForeignKey>Line_Items__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>