force-app/main/default/objects/Order__c/fields/Back_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_Amount__c</fullName>
    <label>Back Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>