force-app/main/default/objects/Order__c/fields/Back_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_Quantity__c</fullName>
    <label>Back Order Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>