force-app/main/default/objects/Order__c/fields/Boat_Make__c.field-meta.xml
<CustomField>
    <fullName>Boat_Make__c</fullName>
    <label>Boat Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>