force-app/main/default/objects/Order__c/fields/Boat_Years__c.field-meta.xml
<CustomField>
    <fullName>Boat_Years__c</fullName>
    <label>Boat Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Boat_Years</valueSetName>
    </valueSet>
</CustomField>