force-app/main/default/objects/Order__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filtered Lookup on Contact</description>
    <label>Contact Person Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>