force-app/main/default/objects/Order__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Customer Name)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>