force-app/main/default/objects/Order__c/fields/Engine_Make__c.field-meta.xml
<CustomField>
    <fullName>Engine_Make__c</fullName>
    <label>Engine Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>