force-app/main/default/objects/Order__c/fields/Engine_Year__c.field-meta.xml
<CustomField>
    <fullName>Engine_Year__c</fullName>
    <label>Engine Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>