force-app/main/default/objects/Order__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>(Amount_On_Order__c +  Shipping_Charges__c) -   Discount_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Amount on Order + Shipping Charges - Discount</inlineHelpText>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>