force-app/main/default/objects/Order__c/fields/Items_Needed__c.field-meta.xml
<CustomField>
    <fullName>Items_Needed__c</fullName>
    <description>Items needed to be purchased</description>
    <label>Items Needed</label>
    <type>TextArea</type>
</CustomField>