force-app/main/default/objects/Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Back Ordered</fullName>
                <default>true</default>
                <label>Back Ordered</label>
            </value>
            <value>
                <fullName>Waiting on Arrival</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>