force-app/main/default/objects/Order__c/fields/Part_description__c.field-meta.xml
<CustomField>
    <fullName>Part_description__c</fullName>
    <label>Part Description</label>
    <type>TextArea</type>
</CustomField>