force-app/main/default/objects/Order__c/fields/Part_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Part_Request_Status__c</fullName>
    <label>Part Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>PO Created</fullName>
            </value>
            <value>
                <fullName>Arrived Closed</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>