force-app/main/default/objects/Order__c/fields/Parts_Request_Your_Boat_Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Your_Boat_Engine_Hours__c</fullName>
    <label>Parts Request - Your Boat Engine Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>