force-app/main/default/objects/Order__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <inlineHelpText>Specifies the Purchase Order Date.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>