force-app/main/default/objects/Order__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Specify the Remarks (if Any)</description>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>