force-app/main/default/objects/Order__c/fields/Scanned_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Receipt__c</fullName>
    <label>Scanned Receipt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>