force-app/main/default/objects/Order__c/fields/Used_For__c.field-meta.xml
<CustomField>
    <fullName>Used_For__c</fullName>
    <label>Used For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
                <label>Inventory Parts</label>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Food and Entertainment</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Inventory Pro-Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>