force-app/main/default/objects/Order__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <inlineHelpText>Select a Manufacturer for Boats, or a Vendor for Parts.</inlineHelpText>
    <label>Vendor /Manufacturer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Manufacturer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>