force-app/main/default/objects/Order__c/fields/WO_for__c.field-meta.xml
<CustomField>
    <fullName>WO_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WO For</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Parts Requests</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>