force-app/main/default/objects/Order__c/recordTypes/Company_Purchase_Requests.recordType-meta.xml
<RecordType>
    <fullName>Company_Purchase_Requests</fullName>
    <active>true</active>
    <label>Company Purchase Requests</label>
</RecordType>