force-app/main/default/objects/Order__c/recordTypes/Order.recordType-meta.xml
<RecordType>
    <fullName>Order</fullName>
    <active>true</active>
    <description>Contains information of Orders for Boats</description>
    <label>Order</label>
</RecordType>