force-app/main/default/objects/Order__c/recordTypes/Order_For_Boats.recordType-meta.xml
<RecordType>
    <fullName>Order_For_Boats</fullName>
    <active>true</active>
    <label>Order For Boats</label>
</RecordType>