force-app/main/default/objects/Order__c/recordTypes/Part_Request.recordType-meta.xml
<RecordType>
    <fullName>Part_Request</fullName>
    <active>true</active>
    <label>Part Request</label>
</RecordType>