force-app/main/default/objects/Order__c/recordTypes/Purchase_Order_Approved.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Order_Approved</fullName>
    <active>true</active>
    <label>Purchase Order Approved</label>
</RecordType>