force-app/main/default/objects/Order__c/recordTypes/Service_Repair_Orders.recordType-meta.xml
<RecordType>
    <fullName>Service_Repair_Orders</fullName>
    <active>true</active>
    <label>Service Repair Orders</label>
</RecordType>