force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Is_Approved__c</columns>
    <columns>PO_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>