force-app/main/default/objects/Order__c/listViews/Part_Request.listView-meta.xml
<ListView>
    <fullName>Part_Request</fullName>
    <columns>NAME</columns>
    <columns>Part_Number__c</columns>
    <columns>Part_Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Part_Request</value>
    </filters>
    <filters>
        <field>Part_Request_Status__c</field>
        <operation>notEqual</operation>
        <value>PO Created</value>
    </filters>
    <label>Part Request</label>
</ListView>