force-app/main/default/objects/Order__c/listViews/Purchase_Order.listView-meta.xml
<ListView>
    <fullName>Purchase_Order</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Amount_On_Order__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Purchase_Order</value>
    </filters>
    <label>Purchase Order</label>
</ListView>