force-app/main/default/objects/Order__c/listViews/Received_Orders.listView-meta.xml
<ListView>
    <fullName>Received_Orders</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Store_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Purchase_Order_Approved</value>
    </filters>
    <label>Received Orders</label>
</ListView>